syntax = "proto3";
option go_package = "proto/";

message MessageBlockRequest {
  int64 hash = 1;
}

message MessageBlock{

  message SingleClientRequest {
    string message = 1;
  }

  message  ClientRequestBatch{
    int64 sender = 1;
    repeated SingleClientRequest requests = 2;
    string id = 3; // unique identifier
  }

  int64 hash = 1;
  repeated ClientRequestBatch requests = 2;
}

